--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <h1>JS ARRAY METHODS</h1>
-    <script src="templateString.js"></script>
+    <script src="DefaultParameter.js"></script>
 
 </body>
 
